--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Marla to Square Feet Converter</title>
 </head>
 <body>
+    <div>
     <div class="container">
         <h1>Marla to Square Feet Converter</h1>
         <form id="areaConverterForm">
@@ -14,6 +15,7 @@
         </form>
         <div id="result" class="result"></div>
     </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
