--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <div>
     <div class="container">
-        <h1>Marla to Square Feet Converter</h1>
+        <h1 class="head1">Marla to Square Feet Converter</h1>
         <form id="areaConverterForm">
-            <label for="marla">Enter the area in Marla:</label>
+            <label for="marla"><h4>Enter the area in Marla:</h4></label>
             <input type="number" step="0.01" id="marla" required>
             <input type="submit" value="Convert">
         </form>
